added privacy policy; updated to v0.9.5

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -165,6 +165,9 @@
             android:key="pref_about_license"
             android:title="@string/settings_about_license" />
         <Preference
+            android:key="pref_about_privacy"
+            android:title="@string/settings_about_privacy" />
+        <Preference
             android:key="pref_about_h_viewer"
             android:title="@string/settings_about_h_viewer" />
     </PreferenceCategory>
