--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -4,11 +4,11 @@
         android:shortcutId="scfavorites"
         android:enabled="true"
         android:icon="@mipmap/favorites"
-        android:shortcutShortLabel="@string/hvfavorites"
+        android:shortcutShortLabel="@string/favorites"
         android:shortcutLongLabel="@string/favorites"
         android:shortcutDisabledMessage="@string/not_support_function">
         <intent
-            android:action="android.intent.action.VIEW"
+            android:action="ml.puredark.hviewer.intent.action.SHORTCUT"
             android:targetPackage="ml.puredark.hviewer"
             android:targetClass="ml.puredark.hviewer.ui.activities.FavouriteActivity" />
         <categories android:name="android.shortcut.conversation" />
@@ -18,11 +18,11 @@
         android:shortcutId="scdownload"
         android:enabled="true"
         android:icon="@mipmap/download"
-        android:shortcutShortLabel="@string/hvdownload"
+        android:shortcutShortLabel="@string/download"
         android:shortcutLongLabel="@string/download"
         android:shortcutDisabledMessage="@string/not_support_function">
         <intent
-            android:action="android.intent.action.VIEW"
+            android:action="ml.puredark.hviewer.intent.action.SHORTCUT"
             android:targetPackage="ml.puredark.hviewer"
             android:targetClass="ml.puredark.hviewer.ui.activities.DownloadActivity" />
         <categories android:name="android.shortcut.conversation" />
