--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -54,6 +54,15 @@
             android:title="@string/settings_view_one_hand"
             android:summary="@string/settings_view_one_hand_summary"/>
 
+        <ListPreference
+            android:key="pref_view_video_player"
+            android:title="@string/settings_view_video_player"
+            android:summary="@string/settings_view_video_player_summary"
+            android:entries="@array/settings_view_video_player_option"
+            android:entryValues="@array/settings_view_video_player_values"
+            android:dialogTitle="@string/settings_view_video_player_dialog_title"
+            android:defaultValue="0"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -73,14 +82,12 @@
             android:summary="@string/settings_download_nomedia_summary"/>
 
         <ml.puredark.hviewer.ui.preferences.LongClickPreference
-            android:defaultValue=""
             android:key="pref_download_path"
             android:singleLine="true"
             android:title="@string/settings_download_path"
             android:summary="@string/settings_download_path_summary"/>
 
         <Preference
-            android:defaultValue=""
             android:key="pref_download_import"
             android:singleLine="true"
             android:title="@string/settings_download_import"
@@ -93,14 +100,12 @@
         android:title="@string/settings_favourite">
 
         <Preference
-            android:defaultValue=""
             android:key="pref_favourite_export"
             android:singleLine="true"
             android:title="@string/settings_favourite_export"
             android:summary="@string/settings_favourite_export_summary"/>
 
         <Preference
-            android:defaultValue=""
             android:key="pref_favourite_import"
             android:singleLine="true"
             android:title="@string/settings_favourite_import"
