--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -39,14 +39,15 @@
                     android:padding="16dp"
                     android:scaleType="fitXY" />
 
-                <!--<TextView
+                <TextView
                     android:id="@+id/tv_title"
+                    android:visibility="gone"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="站点市场"
-                    android:textAppearance="@style/ActionBar.Title" /> !-->
+                    android:textAppearance="@style/ActionBar.Title" />
                 <android.support.v7.widget.AppCompatSpinner
                     android:id="@+id/spinner_source"
                     android:layout_width="0dp"
