--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/iv_cover"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    fresco:actualImageScaleType="centerCrop"/>
+                    fresco:actualImageScaleType="focusCrop"/>
 
             </RelativeLayout>
 
